--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express": "^4.17.1",
     "express-fileupload": "^1.2.0",
     "express-validator": "^6.9.2",
+    "firebase": "^9.22.1",
     "fs": "0.0.1-security",
     "http": "0.0.1-security",
     "jspdf": "^2.5.1",
